# Arke

./: .gitignore  CMakeLists.txt
assets/generator_templates/: shader_encoded.h.jinja
assets/shaders/interface/: interface_draw.frag  interface_draw.vert  interface_text.frag  interface_text.vert
cmake/: Shaders.cmake  Targets.cmake
cmake/modules/: Shaders.cmake
cmake/targets/: CompileShaders.cmake
include/SDL2/: SDL.h  SDL_audio.h  SDL_error.h  SDL_events.h  SDL_gamecontroller.h  SDL_haptic.h  SDL_hidapi.h  SDL_hints.h  SDL_joystick.h  SDL_keyboard.h  SDL_main.h  SDL_messagebox.h  SDL_metal.h  SDL_mutex.h  SDL_render.h  SDL_rwops.h  SDL_surface.h  SDL_system.h  SDL_timer.h  SDL_version.h  SDL_video.h
include/glad/: gl.h
scripts/: compile_shader.py  generate_shader_header.py  generate_shader_headers.py  logger_configuration.py
src/arke/engine/: Consts.h
src/arke/engine/application/: Application.cpp  Application.h  Core.cpp  Core.h  Module.h  ModuleMain.h
src/arke/engine/graphics/: Draw.h  Factory.h  Graphics.h  Looper.h  ShaderProgram.h  Texture.cpp  Texture.h  UIRenderer.h  VertexAttribute.cpp  VertexAttribute.h  VertexAttributes.cpp  VertexAttributes.h  Window.h
src/arke/engine/graphics/backends/glfw/: WindowGLFW.cpp  WindowGLFW.h
src/arke/engine/graphics/backends/opengl/: DrawGL.cpp  DrawGL.h  FactoryGL.cpp  FactoryGL.h  GraphicsGL.cpp  GraphicsGL.h  ShaderProgramGL.cpp  ShaderProgramGL.h  TextureGL.cpp  TextureGL.h  UIRendererGL.cpp  UIRendererGL.h
src/arke/engine/graphics/backends/sdl2/: WindowSDL2.cpp  WindowSDL2.h
src/arke/engine/graphics/backends/vulkan/: GraphicsVulkan.cpp  GraphicsVulkan.h
src/arke/engine/math/: Vector2.cpp  Vector2.h
src/arke/engine/math/unit/: Size.h
src/arke/engine/resources/: ResourceContainer.h  ResourceLoader.h  ResourceType.h  Resources.cpp  Resources.h
src/arke/engine/resources/containers/: BinaryResource.cpp  BinaryResource.h  TextResource.cpp  TextResource.h
src/arke/engine/resources/loaders/: BinaryLoader.cpp  BinaryLoader.h  TextLoader.cpp  TextLoader.h  TextureLoader.cpp  TextureLoader.h
src/arke/engine/ui/: Container.cpp  Container.h  DrawCall.h  DrawContext.cpp  DrawContext.h  Drawable.h  Element.h  HorizontalContainer.cpp  HorizontalContainer.h  VerticalContainer.cpp  VerticalContainer.h
src/arke/engine/ui/unit/: Dp.cpp  Dp.h  Dp2.h  DpSize.h
src/arke/util/: Disposable.h  Error.h  Logging.h  String.h  TypeCheck.h  Version.h
src/glad/: gl.c
